--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
 	<title>City Lickers</title>
 	<!--Reset css link-->
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<!--My css link-->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<!--Bulma css link-->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css.map">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
 </head>
 <body>
+<!--Navbar-->
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="https://bulma.io">
+      <img src="" width="112" height="28">
+    </a>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item">
+        Home
+      </a>
+      <a class="navbar-item">
+        Blog
+      </a>
+      <a class="navbar-item">
+      	About
+      </a>
+      <a class="navbar-item">
+      	Contact
+      </a>
+    </div>
+  </div>
+</nav>
+<!--End Navbar-->
 
 </body>
 </html>
