added links to navbar and card to about

--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-end">
-      <a class="navbar-item">
+      <a class="navbar-item" href="./index.html">
         Home
       </a>
-      <a class="navbar-item">
+      <a class="navbar-item" href="./blog.html">
         Blog
       </a>
-      <a class="navbar-item">
+      <a class="navbar-item" href="./about.html">
       	About
       </a>
-      <a class="navbar-item">
+      <a class="navbar-item" href="./contact.html">
       	Contact
       </a>
     </div>
   </div>
 </nav>
 <!--End Navbar-->
+
 
 </body>
 </html>
